# pre-reasoning

./: .gitignore  CHANGELOG.md  EVALS.md  INSTALL.md  MANIFEST.in  README.md  WHY_TRACES_WORK.md  pyproject.toml  requirements.txt
benchmarks/: terminal_bench_2.xlsx
examples/: basic.py  full_mode.py  pulse_hook.py
hermes-agent/: SOUL.md  hermes_agent_hooks.py  pre_reasoning_lib.py
hooks/: README.md  stop_enforcer.py  user_prompt_submit.py
pre_reasoning/: __init__.py  cli.py  engine.py  engine_core.py  harness.py  inference.py
pre_reasoning/checkpoints/: __init__.py  pre-reasoning-12m-v3.safetensors
skill/: SKILL.md
tests/: test_engine.py
